src/main/java/com/example/demo/common/error/exception/BusinessException.java
package com.example.demo.common.error.exception;

import com.example.demo.common.contants.ErrorCode;
import lombok.Getter;

@Getter
public class BusinessException extends RuntimeException {

    private final ErrorCode errorCode;

    public BusinessException(ErrorCode errorCode) {
        super(errorCode.name());
        this.errorCode = errorCode;
    }

}
